--- a/rootfs/etc/nginx/conf.d/default.conf
+++ b/rootfs/etc/nginx/conf.d/default.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80 default ipv6only=on;
 
-    root /app/public;
+    root /app/www;
     index index.php;
 
     # Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
