--- a/rootfs/etc/php/pool.d/www.conf
+++ b/rootfs/etc/php/pool.d/www.conf
@@ -340,7 +340,7 @@ pm.max_spare_servers = 3
 ; Chdir to this directory at the start.
 ; Note: relative path can be used.
 ; Default Value: current directory or / when chroot
-chdir = /app/public
+chdir = /app/www
 
 ; Redirect worker stdout and stderr into main error log. If not set, stdout and
 ; stderr will be redirected to /dev/null according to FastCGI specs.
