--- a/rootfs/etc/nginx/conf.d/default.conf
+++ b/rootfs/etc/nginx/conf.d/default.conf
@@ -9,7 +9,6 @@ server {
     sendfile off;
 
     # Add stdout logging
-
     error_log /dev/stdout info;
     access_log /dev/stdout;
 
@@ -22,7 +21,7 @@ server {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass unix:/var/run/php-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
         fastcgi_index index.php;
         include fastcgi_params;
     }
@@ -34,7 +33,14 @@ server {
     # deny access to . files, for security
     #
     location ~ /\. {
-            log_not_found off;
-            deny all;
+        log_not_found off;
+        deny all;
     }
+}
+
+# Force www on domain
+server {
+    listen 80;
+    server_name "~^(?!www\.).*";
+    return 301 $scheme://www.$host$request_uri;
 }
