New nginx config directory the have custom config files in app directory

--- a/rootfs/etc/nginx/nginx.conf
+++ b/rootfs/etc/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
 
     keepalive_timeout 65;
 
-    gzip  on;
+    gzip on;
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
@@ -33,5 +33,6 @@ http {
     gzip_http_version 1.0;
     gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
-    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/default.conf;
+    include /app/config/nginx.conf;
 }
